@@ -1,3 +1,7 @@
+2017-11-20  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* chopstx-cortex-m.c [__ARM_ARCH_6M__] (chx_sched): Fix.
+
 2017-11-18  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* example-fsm-55/hh.c (main): Just return.
